tests/lean/invalidFieldName.lean.expected.out
invalidFieldName.lean:3:2-3:4: error: invalid field name 'mk', it is equal to structure constructor name
